Map wasn't displaying on mobile. Trying to fix that.

--- a/truckster/styles/truckster-style.css
+++ b/truckster/styles/truckster-style.css
@@ -1,3 +1,7 @@
+html, body { 
+    height:100%
+}
+
 .header {
   background-color: #B83C30;
 }
@@ -34,5 +38,5 @@
   magin-right: auto;
 }
 #map {
- height: 500px;
+ height: 70%;
 }
